src/css/style.css
/* ... */
@media(max-width: 568px) {
    .formula--hero {
      padding-top: 130px;}
    .formula__wrapper {
      margin-left: 0;}
    .formula__step {
      margin-right: 0;}}
/* PROMO */
.promo {
  background: #6000FF;
  color: white;
  padding-top: 70px;
  padding-bottom: 100px;}
.promo__wrapper {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-align: center;
    -webkit-align-items: center;
        -ms-flex-align: center;
            align-items: center;
    margin-top: 40px;}
.promo__text {
    -webkit-box-flex: 0;
    -webkit-flex: 0 1 360px;
        -ms-flex: 0 1 360px;
            flex: 0 1 360px;
    padding-right: 20px;
    font-size: 20px;
    line-height: 1.4;}
.promo .b-ext-text {
    margin-top: -5px;
    max-width: 680px;}
@media(max-width: 785px) {
  .promo {
    padding-top: 60px;
    padding-bottom: 60px;}
    .promo__wrapper {
      -webkit-box-orient: vertical;
      -webkit-box-direction: normal;
      -webkit-flex-direction: column;
          -ms-flex-direction: column;
              flex-direction: column;}
    .promo__text {
      -webkit-box-flex: 0;
      -webkit-flex: 0 0 auto;
          -ms-flex: 0 0 auto;
              flex: 0 0 auto;
      padding-bottom: 40px;}}
/* BENEFITS */
.benefits {
  padding: 110px 0;}
.benefits__item-content {
      display: -webkit-box;
      display: -webkit-flex;
      display: -ms-flexbox;
      display: flex;
      margin: 0 8.6%;}
.benefits__item__image {
      -webkit-box-flex: 0;
      -webkit-flex: 0 1 50%;
          -ms-flex: 0 1 50%;
              flex: 0 1 50%;}
.benefits__item__image img {
        max-width: 100%;}
.benefits__item__content {
      -webkit-box-flex: 0;
      -webkit-flex: 0 1 50%;
          -ms-flex: 0 1 50%;
              flex: 0 1 50%;
      padding-left: 8.6%;
      font-size: 20px;
      line-height: 1.4;
      color: #6000FF;}
.benefits__item__content .btn {
        margin-top: 10px;}
@media(max-width: 960px) {
  .benefits {
    padding: 90px 0;}
      .benefits__item-content {
        font-size: 18px;}}
@media(max-width: 785px) {
  .benefits {
    padding: 70px 0;}
      .benefits__item-content {
        -webkit-box-orient: vertical;
        -webkit-box-direction: normal;
        -webkit-flex-direction: column;
            -ms-flex-direction: column;
                flex-direction: column;
        margin: 0 60px;}
      .benefits__item__image {
        -webkit-box-flex: 0;
        -webkit-flex: 0 0 auto;
            -ms-flex: 0 0 auto;
                flex: 0 0 auto;
        text-align: center;}
      .benefits__item__content {
        padding-left: 0;
        margin-top: 20px;
        -webkit-box-flex: 0;
        -webkit-flex: 0 0 auto;
            -ms-flex: 0 0 auto;
                flex: 0 0 auto;
        padding-bottom: 20px;}}
@media(max-width: 568px) {
  .benefits {
    padding-top: 50px;}
      .benefits__item-content {
        margin: 0;}
      .benefits__item__content {
        font-size: 16px;
        padding-left: 0px;
        padding-right: 0px;
        margin-top: 10px;}}
@media(max-width: 414px) {
        .benefits__item__content .btn {
          width: 99%;
          margin-left: 0.5%;}}
.slick-arrow {
  -webkit-apperance: none;
  position: absolute;
  top: 50%;
  -webkit-transform: translateY(-50%);
      -ms-transform: translateY(-50%);
          transform: translateY(-50%);
  background-repeat: no-repeat;
  background-position: center center;
  width: 45px;
  height: 45px;
  background-color: transparent;
  font-size: 0;
  cursor: pointer;
  -webkit-transition: all .25s ease-in-out;
  -o-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;}
.slick-arrow:hover {
  -webkit-transform: translateY(-50%) scale(1.1);
      -ms-transform: translateY(-50%) scale(1.1);
          transform: translateY(-50%) scale(1.1);}
.slick-next {
  right: 0;
  background-image: url('../images/svg/slick-next.svg');}
.slick-prev {
  left: 0;
  background-image: url('../images/svg/slick-prev.svg');}
@media(max-width: 568px) {
  .slick-arrow {
    opacity: 0;
    display: none;}}
.slick-dots {
  margin-left: 53.5%;
  margin-top: 15px;}
.slick-dots li {
    font-size: 0;
    margin-right: 10px;}
.slick-dots li:after {
  display: block;
  content: ' ';
  width: 10px;
  height: 10px;
  background: #6000FF;
  opacity: .2;
  cursor: pointer;
  -webkit-transform: rotate(45deg);
      -ms-transform: rotate(45deg);
          transform: rotate(45deg);
  -webkit-transition: all .25s ease-in-out;
  -o-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;}
.slick-dots li button {
      display: none;}
.slick-dots li.slick-active:after {
  opacity: 1;}
.slick-dots li:last-child {
  margin-right: 0;}
@media(max-width: 785px) {
  .slick-dots {
    margin: 0;
    padding: 0;
    position: absolute;
    bottom: -10px;
    left: 50%;
    -webkit-transform: translateX(-50%);
        -ms-transform: translateX(-50%);
            transform: translateX(-50%);}}
/* SERVICeS */
.services {
  background: #00192C;
  color: white;
  padding-top: 60px;
  padding-bottom: 100px;}
.services__wrapper {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-align: start;
    -webkit-align-items: flex-start;
        -ms-flex-align: start;
            align-items: flex-start;}
.services__content {
    position: relative;
    z-index: 2;
    -webkit-box-flex: 0;
    -webkit-flex: 0 1 auto;
        -ms-flex: 0 1 auto;
            flex: 0 1 auto;
    padding-right: 20px;}
.services__image {
    position: relative;
    z-index: 1;
    -webkit-box-flex: 0;
    -webkit-flex: 0 0 206px;
        -ms-flex: 0 0 206px;
            flex: 0 0 206px;
    padding-left: 20px;
    text-align: right;}
/* ... */

